...
    [super viewDidLoad];
    self.title = @"Προτάσεις";
    self.chain = [NSMutableArray array];

    self.sentenceLabel = [[UILabel alloc] init];
    self.sentenceLabel.numberOfLines = 0;
    self.sentenceLabel.accessibilityIdentifier = @"sentence.chain";

    self.saveButton = [self buttonWithSymbol:@"bookmark.circle.fill"
                                  identifier:@"sentence.save"
                                      action:@selector(saveChain)];
    self.playButton = [self buttonWithSymbol:@"play.circle.fill"
                                  identifier:@"sentence.play"
                                      action:@selector(playChain)];
    self.clearButton = [self buttonWithSymbol:@"trash.circle"
                                   identifier:@"sentence.clear"
                                       action:@selector(clearChain)];

    UIStackView *buttons = [[UIStackView alloc]
        initWithArrangedSubviews:@[ self.playButton, self.saveButton, self.clearButton ]];
    buttons.axis = UILayoutConstraintAxisHorizontal;
    buttons.distribution = UIStackViewDistributionFillEqually;
...

    self.tableView = [[UITableView alloc] initWithFrame:CGRectZero style:UITableViewStylePlain];
    self.tableView.dataSource = self;
    self.tableView.delegate = self;
    self.tableView.rowHeight = UITableViewAutomaticDimension;
    self.tableView.estimatedRowHeight = 64;
    self.tableView.accessibilityIdentifier = @"sentence.table";
    [self.tableView registerClass:[LGWordCell class]
           forCellReuseIdentifier:[LGWordCell reuseIdentifier]];
    [self.tableView registerClass:[UITableViewCell class]
           forCellReuseIdentifier:LGSavedSentenceCellID];

    UIStackView *layout = [[UIStackView alloc]
...
